# dmsp_api_prototype

./: .gitignore  CHANGELOG.md  README.md  update-dependencies.sh
queries/dmpworks/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.aws  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
queries/dmpworks/docs/: DEMO.md
queries/dmpworks/python/dmpworks/: cli.py  cli_utils.py  dmsp.py  load_plans.py  transforms.py  utils.py
queries/dmpworks/python/dmpworks/batch/: cli.py  crossref_metadata.py  datacite.py  openalex_funders.py  openalex_works.py  opensearch.py  ror.py  sql.py  sqlmesh.py  tasks.py  utils.py
queries/dmpworks/python/dmpworks/dmp/: dmp.py  enrichment.py  model.py
queries/dmpworks/python/dmpworks/dmsp/: cli.py  related_works.py
queries/dmpworks/python/dmpworks/funders/: award_id.py  nih_award_id.py  nih_funder_api.py  nsf_award_id.py  nsf_funder_api.py  parser.py
queries/dmpworks/python/dmpworks/model/: common.py  dmp_model.py  related_work_model.py  work_model.py
queries/dmpworks/python/dmpworks/opensearch/: chunk_size.py  cli.py  create_index.py  dmp_match.py  dmp_search.py  dmp_works.py  enrich_dmps.py  explanations.py  index.py  sync.py  sync_dmps.py  sync_works.py  utils.py
queries/dmpworks/python/dmpworks/polars_expr_plugin/: __init__.py
queries/dmpworks/python/dmpworks/sql/: .gitignore  cli.py  commands.py  config.yaml  create-variables.sql  crossref-meta.sql  datacite-affiliation-names.sql  datacite-affiliation-rors.sql  datacite-author-names.sql  datacite-author-orcids.sql  datacite-award-ids.sql  datacite-funder-ids.sql  datacite-funder-names.sql  datacite-index.sql  datacite-types.sql  datacite-updated-dates.sql  export-works-index.sql  openalex-abstracts.sql  openalex-affiliation-names.sql  openalex-affiliation-rors.sql  openalex-author-names.sql  openalex-author-orcids.sql  openalex-award-ids.sql  openalex-funder-ids.sql  openalex-funder-names.sql  openalex-index.sql  openalex-meta.sql  openalex-publication-dates.sql  openalex-titles.sql  openalex-types.sql  openalex-updated-dates.sql
queries/dmpworks/python/dmpworks/sqlmesh/: cli.py  config.yaml  sqlmesh.py
queries/dmpworks/python/dmpworks/transform/: cli.py  crossref_metadata.py  datacite.py  demo_dataset.py  dmps.py  openalex_funders.py  openalex_works.py  pipeline.py  ror.py  transforms.py  utils_cli.py  utils_file.py
queries/dmpworks/src/: expressions.rs  lib.rs
queries/dmpworks/src/dmpworks/: cli.py
queries/dmpworks/src/dmpworks/opensearch/: create_index.py  sync_works.py
queries/dmpworks/src/dmpworks/sql/: export-works-index.sql
queries/dmpworks/tests/: test_polars_expr_plugin.py  utils.py
queries/dmpworks/tests/dmpworks/: test_cli.py  test_utils.py
queries/dmpworks/tests/fixtures/: _pubmed_ids_to_dois.yaml  find_crossref_doi.yaml  find_datacite_doi.yaml  nih_award_id_e2e.yaml  nih_award_ids.csv  nih_core_project_to_appl_ids.yaml  nih_fetch_award_publication_dois.yaml  nsf_award_id_e2e.yaml  nsf_award_ids.csv  nsf_fetch_award_publication_dois_0802290.yaml  nsf_fetch_award_publication_dois_1507101.yaml  nsf_fetch_org_id.yaml
scripts/: Gemfile  (+14 more)
(+433 files in other folders)
